RESOLVED FIXED159306
Mail crashes on launch at WebCore::PaymentCoordinator::~PaymentCoordinator() + 20
https://bugs.webkit.org/show_bug.cgi?id=159306
Summary Mail crashes on launch at WebCore::PaymentCoordinator::~PaymentCoordinator() ...
Anders Carlsson
Reported 2016-06-30 10:44:54 PDT
Mail crashes on launch at WebCore::PaymentCoordinator::~PaymentCoordinator() + 20
Attachments
Patch (2.10 KB, patch)
2016-06-30 10:46 PDT, Anders Carlsson
thorton: review+
Anders Carlsson
Comment 1 2016-06-30 10:46:06 PDT
Anders Carlsson
Comment 2 2016-06-30 10:48:12 PDT
Note You need to log in before you can comment on or make changes to this bug.