Mail crashes on launch at WebCore::PaymentCoordinator::~PaymentCoordinator() + 20 https://bugs.webkit.org/show_bug.cgi?id=159306 rdar://problem/27092107

Reviewed by Tim Horton.

* WebView/WebView.mm:
(-[WebView initSimpleHTMLDocumentWithStyle:frame:preferences:groupName:]):
Create a WebPaymentCoordinatorClient. Remove an unneeded #import.

(-[WebView _commonInitializationWithFrameName:groupName:]):
Remove an unneeded #import.

Canonical link: https://commits.webkit.org/177427@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202685 268f45cc-cd09-0410-ab3c-d52691b4dbfc